# techcrm-rs

./: .gitignore  Cargo.toml  docker-compose.yaml  pyproject.toml
app/: Cargo.toml
app/src/: db.rs  main.rs  settings.rs
entity/: Cargo.toml
entity/src/: users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250612_134407_create_users.rs  m20250613_083617_seed_users.rs
src/: db.py  main.py
src/models/: __init__.py  cabinet.py  departamnet.py  person.py  user.py
src/repositories/: user.py
src/routers/: user.py
src/schemes/: person.py  user.py
src/services/: auth.py
