[workspace]
resolver = "1"
members = [ 
    "entity",
    "migration",
    "app", 
]
default-members = ["app"]

# [package]
# name = "itfate"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# 
# dotenvy = "0.15.7"
# 
# tracing-subscriber = "0.3.19"
# axum = "0.8.4"
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# 
# 
# uuid = { version = "1", features = ["serde", "v4"] }
