[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
config = "0.15"
once_cell = "1.21.3"
