[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[lib]
name = "entity"
path = "src/lib.rs"


[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "1.1", features = ["macros"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }